Changes for APR 1.1.0

  *) Add APR Multicast functions; including support for
     Source-Specific Multicast from Colm MacCarthaigh.  [Paul Querna]

  *) Add a build script to create a solaris package.  [Graham Leggett]
  
  *) Add support for APR_TCP_DEFER_ACCEPT.  [Paul Querna]

  *) Rename the apr_file_permissions macros (APR_UREAD, APR_UWRITE etc.)
     to have prefix APR_FPROT_ (old names kept for compatibility).
     [Stas Bekman]

  *) Emit the run-time link path option in apr-config after installation
     if the user is linking with libtool.  [Justin Erenkrantz]

  *) Add apr_file_writev_full to ensure an entire iovec is writen to a file.
     [Paul Querna]

  *) Remove the runtime test for Sendfile versions on FreeBSD. PR 25718.
     [Mike Silbersack <silby silby.com>, Paul Querna]

  *) Rename the apr_file_open macros (APR_READ, APR_WRITE, etc.) to
     have prefix APR_FOPEN_ (old names kept for compatibility).
     [Stas Bekman]

  *) Added apr_os_uuid_get() support for Linux via libuuid and for modern 
     BSDs which have uuid_create as part of their libc.  [Paul Querna]

  *) Added Solaris 10 'Event Ports' as a backend for APR Pollset.  This 
     backend also supports the APR_POLLSET_THREADSAFE flag.  [Paul Querna]

  *) Added the APR_POLLSET_THREADSAFE flag. This allows multiple threads
     to call the Pollset Add or Remove functions in a thread safe manner.
     Currently only EPoll and KQueue support this flag.  [Paul Querna]

  *) Split poll/unix/poll.c into separate files for each Poll or Pollset 
     implementation. [Paul Querna]

  *) Rewrite apr_file_printf to handle arbitrary length strings.
     PR 28029.  [Chris Knight <Christopher.D.Knight nasa.gov>,
     Garrett Rooney <rooneg electricjellyfish.net>]

Changes for APR 1.0.2

  *) [NetWare] Fixed some type mismatches in threadproc/netware/proc.c and
     locks/netware/thread_mutex.c that prevented APR from building with the
     latest release of the LibC SDK. [Brad Nicholes]
     