@@ -227,6 +227,8 @@ extern "C" {
 #define APR_HAS_XTHREAD_FILES     0
 #define APR_HAS_OS_UUID           @osuuid@
 
+#define APR_PROCATTR_USER_SET_REQUIRES_PASSWORD 0
+
 /* APR sets APR_FILES_AS_SOCKETS to 1 on systems where it is possible
  * to poll on files/pipes.
  */
