@@ -194,6 +194,8 @@ extern "C" {
 #define APR_HAS_XTHREAD_FILES     0
 #define APR_HAS_OS_UUID           0
 
+#define APR_PROCATTR_USER_SET_REQUIRES_PASSWORD 0
+
 /* Netware can poll on files/pipes.
  */
 #define APR_FILES_AS_SOCKETS      1
